# rfetch

./: Cargo.toml  LICENSE  Makefile  README.md
src/: cpu.rs  disk.rs  main.rs  mem.rs  os.rs  up.rs  user.rs
