[package]
name = "rfetch"
version = "0.1.0"
edition = "2018"
authors = [ "jnats <jnats@salyut.one" ]
description = "simple fetch written in rust"
license = "BSD3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys-info = "*"
whoami = "*"
